# logiclink-desk

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: publish-npm.yml
npm/scripts/: package-binary.js  verify-package.js
prebuilt/darwin-arm64/: logiclink-desk
src/: ble.rs  commands.rs  config.rs  lib.rs  main.rs  protocol.rs  response.rs
