[package]
name = "logiclink-desk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
btleplug = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
uuid = "1.18"
